Update: apppay ip改成domainname&&網址參數拔掉

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -466,7 +466,7 @@
                         console.log(resp)
                         if (resp && resp.success) {
                             let postDataUrl = '@AppPayLoginUrl';
-                            postDataUrl = postDataUrl + `?merchantId=${resp.merchantId}&txReqId=${resp.txReqId}&sign=${resp.sign}`;
+                            postDataUrl = postDataUrl;
                             let postdata =
                             {
                                 merchantId: resp.merchantId,
