修正不安全的第三方鏈結 (target="_blank")

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CommonTools/CommonTools.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CommonTools/CommonTools.cshtml
@@ -21,12 +21,12 @@
                     <nav class="c-popover__main">
                         <ul class="l-flex u-flex-col u-flex-gap-md s4">
                             <li class="l-flex__item">
-                                <a href="https://www.facebook.com/sharer/sharer.php?u=" class="o-social o-social--sm o-social--fb" target="_blank" data-share>
+                                <a href="https://www.facebook.com/sharer/sharer.php?u=" class="o-social o-social--sm o-social--fb" target="_blank" rel="noopener noreferrer" data-share>
                                     <span class="u-hidden@mb-only">Facebook</span>
                                 </a>
                             </li>
                             <li class="l-flex__item">
-                                <a href="https://social-plugins.line.me/lineit/share?url=" class="o-social o-social--sm o-social--line" target="_blank" data-share>
+                                <a href="https://social-plugins.line.me/lineit/share?url=" class="o-social o-social--sm o-social--line" target="_blank" rel="noopener noreferrer" data-share>
                                     <span class="u-hidden@mb-only">LINE</span>
                                 </a>
                             </li>
