--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_BasicInformation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_BasicInformation.cshtml
@@ -64,7 +64,7 @@
                         <span class="t-bold">@etfData.PublicLimitedCompanyName<br>
                         @if (!string.IsNullOrEmpty(etfData.Website))
                         {
-                            <a href="@etfData.Website" class="o-link" target="_blank">@etfData.Website</a>
+                            <a href="@etfData.Website" class="o-link" target="_blank" rel="noopener noreferrer">@etfData.Website</a>
                         }
                         </span>
                     </div>
