--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
@@ -13,7 +13,7 @@
                             依「中華民國證券投資信託暨顧問商業同業公會會員及其銷售機構基金通路報酬揭露施行要點」規定，揭露本行上架銷售基金通路報酬內容
                         </div>
                         <div class="l-flex__item">
-                            <a href="https://www.sitca.org.tw/ROC/FundIntroduce/FI0009.aspx" class="o-suffixLink o-suffixLink--right o-suffixLink--sm" target="_blank">看懂通路報酬揭露資訊</a>
+                            <a href="https://www.sitca.org.tw/ROC/FundIntroduce/FI0009.aspx" class="o-suffixLink o-suffixLink--right o-suffixLink--sm" target="_blank" rel="noopener noreferrer">看懂通路報酬揭露資訊</a>
                         </div>
                     </div>
                 </div>
