--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
@@ -11,7 +11,7 @@
     var memberSettingUrl = MemberRelatedLinkHelper.GetMemberSettingUrl();
 }
 <div class="c-sidebar__navs">
-    <a href="https://firstbk.tw/4s7bjv" target="_blank" class="c-sideBtn c-sideBtn--round">
+    <a href="https://firstbk.tw/4s7bjv" target="_blank" rel="noopener noreferrer" class="c-sideBtn c-sideBtn--round">
         <i class="c-sideBtn__icon c-sideBtn__icon--service"></i>
         <span>第e客服</span>
     </a>
