--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VideoCarousel/VideoCarousel.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VideoCarousel/VideoCarousel.cshtml
@@ -42,7 +42,7 @@
                                                 <div class="c-gridview">
                                                     @if (item.CheckedOpenVideoLinkinLightBox)
                                                     {
-                                                        <a href="@item.LinkUrl" class="c-gridview__media @icon" target="_blank">
+                                                        <a href="@item.LinkUrl" class="c-gridview__media @icon" target="_blank" rel="noopener noreferrer">
                                                             <img src="@item.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                         </a>
                                                     }
@@ -79,7 +79,7 @@
                                                     <div class="c-gridview">
                                                         @if (item1.CheckedOpenVideoLinkinLightBox)
                                                         {
-                                                            <a href="@item1.LinkUrl" class="c-gridview__media @icon1" target="_blank">
+                                                            <a href="@item1.LinkUrl" class="c-gridview__media @icon1" target="_blank" rel="noopener noreferrer">
                                                                 <img src="@item1.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                             </a>
                                                         }
