add : E02-3會員首頁通知&&到價通知排程

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/FocusList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/FocusList.cshtml
@@ -1,5 +1,4 @@
-﻿<div class="c-tab__panel is-active" data-tab-panel-id="tab-1">
-    <div class="c-tab c-tab--pellet" data-tab="true" data-docking="false">
+﻿    <div class="c-tab c-tab--pellet" data-tab="true" data-docking="false">
         <div class="c-tab__header">
             <ul class="c-tab__navs">
                 <!-- .is-active: 作用中的項目 -->
@@ -35,6 +34,5 @@
             @Html.Partial("~/Views/Feature/Wealth/Component/FocusList/_ForeignStockList.cshtml")
         </div>
     </div>
-</div>
 
 @Html.Partial("~/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml")
