Add : 添加儲存搜尋關鍵字功能

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchFilter.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchFilter.cshtml
@@ -29,7 +29,7 @@
                                     <div class="o-actionbox o-actionbox--lg" data-clear="true">
                                         <!-- #keyword: 請見頁面下方的script邏輯，套用jquery.autocomplete套件 -->
                                         <!-- [data-clear="textbox"]: 套用清除按鈕功能，標示此為文字輸入框 -->
-                                        <input id="uid-searchbox" type="search" class="o-actionbox__input" data-clear="textbox" placeholder="請輸入代碼或名稱" data-keyword-input>
+                                        <input insertKeywords eh-search-pageid="@Sitecore.Context.Item.ID.Guid" eh-search-type="ETF" id="uid-searchbox" type="search" class="o-actionbox__input" data-clear="textbox" placeholder="請輸入代碼或名稱" data-keyword-input>
                                         <button type="submit" class="o-actionbox__btn o-actionbox__btn--magnifier" data-keyword-submit id="uid-btn-search"></button>
                                         <!-- [data-clear="button"]: 套用清除按鈕功能，標示此為清除按鈕 -->
                                         <button type="button" class="o-actionbox__clear" data-clear="button">清除</button>
