--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
@@ -25,7 +25,7 @@
                                 <div class="o-actionbox o-actionbox--lg" data-clear="true">
                                     <!-- #keyword: 請見頁面下方的script邏輯，套用jquery.autocomplete套件 -->
                                     <!-- [data-clear="textbox"]: 套用清除按鈕功能，標示此為文字輸入框 -->
-                                    <input id="keyword" type="search" class="o-actionbox__input" data-clear="textbox" placeholder="請輸入代碼或名稱" data-search-input="" autocomplete="off">
+                                    <input insertKeywords eh-search-pageid="@Sitecore.Context.Item.ID.Guid" eh-search-type="Fund" id="keyword" type="search" class="o-actionbox__input" data-clear="textbox" placeholder="請輸入代碼或名稱" data-search-input="" autocomplete="off">
                                     <button type="submit" class="o-actionbox__btn o-actionbox__btn--magnifier" data-search-submit=""></button>
                                     <!-- [data-clear="button"]: 套用清除按鈕功能，標示此為清除按鈕 -->
                                     <button type="button" class="o-actionbox__clear" data-clear="button">清除</button>
@@ -411,11 +411,13 @@
             $('[data-search-input]').on('keypress.fund', function (e) {
                 if (e.which === 13 && !!$(this).val()) {
                     HandleSearch();
+                    insertKeywords();
                 }
             });
             $('[data-search-submit]').on('click.fund', function (e) {
                 e.preventDefault();
                 HandleSearch();
+                insertKeywords();
             });
             $('[data-fund-select]').on('change.fund', function (e) {
                 if (!!e.target.value) {
