--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -858,6 +858,7 @@
             $('[data-keyword-submit]').on('click.loading', function () {
                 if (!!$('[data-keyword-input]').val().trim()) {
                     loading();
+                    insertKeywords();
                 }
             });
 
