--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -488,6 +488,7 @@
                 $('[data-keyword-submit]').on('click.loading', function () {
                     if (!!$('[data-keyword-input]').val().trim()) {
                         loading();
+                        insertKeywords();
                     }
                 });
 
