--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -22,7 +22,7 @@
                                 </div>
                                 <div class="c-filterForm__value">
                                     <div class="o-actionbox o-actionbox--lg" data-clear="true">
-                                        <input id="keyword" type="search" class="o-actionbox__input" data-clear="textbox" placeholder="請輸入代碼或名稱" data-keyword-input>
+                                        <input insertKeywords eh-search-pageid="@Sitecore.Context.Item.ID.Guid" eh-search-type="Fund" id="keyword" type="search" class="o-actionbox__input" data-clear="textbox" placeholder="請輸入代碼或名稱" data-keyword-input>
                                         <button type="submit" class="o-actionbox__btn o-actionbox__btn--magnifier" data-keyword-submit></button>
                                         <button type="button" class="o-actionbox__clear" data-clear="button">清除</button>
                                     </div>
@@ -2167,6 +2167,7 @@
                 $('[data-keyword-submit]').on('click.loading', function () {
                     if (!!$('[data-keyword-input]').val().trim()) {
                         loading();
+                        insertKeywords();
                     }
                 });
             }
