--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -99,6 +99,36 @@
             let now = new Date();
             return now.toISOString().split('T')[0].replaceAll('-','/') ;
         }
+
+        window.insertKeywords = function () {
+            let self = $("input[insertKeywords]");
+            let isSeachBar = self.attr("issearchbar");
+            let params;
+
+            if (isSeachBar == "true") {
+                params = {
+                    pageId: self.attr("eh-search-pageid"),
+                    keyword: self.val().trim(),
+                    productType: $("#SearchCategory").find('option:selected').attr('producttype')
+                };
+            }
+            else {
+                params = {
+                    pageId: self.attr("eh-search-pageid"),
+                    keyword: self.val().trim(),
+                    productType: self.attr('eh-search-type')
+                };
+            }
+
+            $.ajax({
+                url: '@ClientRoute.GenerateUrl(this, "SearchKeywords", "Insert")',
+                type: 'POST',
+                data: params
+            }).done(function (data, textStatus, jqXHR) {
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+            });
+        }
+
         EventHandler.AddOnExec('compare-init', function (e) {
             let self = e.target;
             $(self).interactive();
